@@ -4,7 +4,9 @@
 0.2
 	- Title and background auto-hide after 5 seconds
 	- Title and settings appear when the widget is moved or the app activated
-	- It is now possible to set if the board should appear on the top, bottom,
-	  left or right to fit regardless of the position of the app on screen
+	- It is now possible to set the orientation of the board
+	- Add button to change the board orientation ingame
 	- Fixed 32bit support (was providing the wrong pyd file)
 	- Cleaned up boards inner border and opacity
+	- Add option for custom board if a file with name board_<username>.png
+	  exists
